# Use

./: .gitattributes  .gitignore  AGENTS.md  Cargo.toml  README.md  THIRD_PARTY_NOTICES.md
crates/browser/: Cargo.toml
crates/browser-driver/: Cargo.toml  UPSTREAM.md  build.rs
crates/browser-driver/dashboard/: README.md  package.json  pnpm-lock.yaml
crates/browser-driver/dashboard/src/app/: layout.tsx
crates/browser-driver/dashboard/src/store/: sessions.ts
crates/browser-driver/skill-data/agentcore/: SKILL.md
crates/browser-driver/skill-data/core/: SKILL.md
crates/browser-driver/skill-data/core/references/: authentication.md  commands.md  profiling.md  proxy-support.md  session-management.md  snapshot-refs.md  trust-boundaries.md  video-recording.md  webgpu.md
crates/browser-driver/skill-data/core/templates/: authenticated-session.sh  capture-workflow.sh  form-automation.sh
crates/browser-driver/skill-data/dogfood/: SKILL.md
crates/browser-driver/skill-data/electron/: SKILL.md
crates/browser-driver/skill-data/slack/: SKILL.md
crates/browser-driver/skill-data/slack/references/: slack-tasks.md
crates/browser-driver/skill-data/vercel-sandbox/: SKILL.md
crates/browser-driver/skills/a3s-use-browser/: SKILL.md
crates/browser-driver/skills/agent-browser/: SKILL.md
crates/browser-driver/src/: commands.rs  connection.rs  flags.rs  install.rs  lifecycle.rs  main.rs  mcp.rs  output.rs  plugins.rs  product.rs  read.rs  skills.rs  test_utils.rs  upgrade.rs
crates/browser-driver/src/doctor/: chrome.rs  config.rs  daemon.rs  environment.rs  fix.rs  helpers.rs  launch.rs  mod.rs  network.rs  providers.rs  security.rs  webgpu.rs
crates/browser-driver/src/native/: actions.rs  auth.rs  browser.rs  e2e_tests.rs  inspect_server.rs  screenshot.rs  snapshot.rs  state.rs  tracing.rs
crates/browser-driver/src/native/cdp/: chrome.rs  lightpanda.rs
crates/browser-driver/src/native/stream/: chat.rs  http.rs
crates/browser-driver/tests/: upstream_parity.rs
crates/browser/src/: chrome.rs  chrome_install.rs  cleanup.rs  install.rs  install_tests.rs  lib.rs  lightpanda.rs  management.rs  pool.rs  renderer.rs  session.rs
crates/core/: Cargo.toml
crates/core/fixtures/releases/: mcp-release-v1.json  mcp-release-v1.sha256  skill-release-v1.json  skill-release-v1.sha256
crates/core/src/: lib.rs  release.rs
crates/core/src/release/: validation.rs
crates/core/tests/: release_descriptors.rs
crates/document/: Cargo.toml  README.md
crates/document/skills/a3s-use-document/: SKILL.md
crates/document/src/: cli.rs  client.rs  lib.rs  mcp.rs  models.rs  ocr_engine.rs  source.rs
crates/document/tests/: document_parser.rs
crates/extension/: Cargo.toml
crates/extension/src/: digest.rs  lib.rs  package.rs  paths.rs  registry.rs  registry_io.rs  registry_tests.rs  release_bundle.rs  remote.rs  remote_tests.rs  route_lock.rs  source.rs  tuf_test_support.rs
crates/ocr/: Cargo.toml  README.md
crates/ocr/skills/a3s-use-ocr/: SKILL.md
crates/ocr/src/: assets.rs  cli.rs  client.rs  config.rs  engine.rs  install.rs  lib.rs  main.rs  mcp.rs  models.rs  postprocess.rs  preprocess.rs  provider.rs
crates/ocr/tests/: ppocr_v6_contract.rs
crates/office/: Cargo.toml
crates/office/skills/a3s-use-office/: SKILL.md
crates/office/skills/a3s-use-office/agents/: openai.yaml
crates/office/skills/a3s-use-office/references/: mcp.md  presentation.md  spreadsheet.md  word.md
crates/office/src/: annotated_tests.rs  arrange_tests.rs  cell_border_tests.rs  cell_format_tests.rs  cell_merge_tests.rs  command.rs  comment_tests.rs  conditional_formatting_tests.rs  data_validation_tests.rs  discovery.rs  editor.rs  format_tests.rs  hyperlink_tests.rs  image_tests.rs  install.rs  issues.rs  issues_tests.rs  lib.rs  named_range_tests.rs  opc.rs  opc_edit.rs  opc_tests.rs  package.rs  package_tests.rs  presentation_table_tests.rs  render_tests.rs  replay.rs  replay_tests.rs  semantic_tests.rs  spreadsheet_conditional_format.rs  spreadsheet_edit_tests.rs  spreadsheet_filter.rs  spreadsheet_filter_tests.rs  spreadsheet_formula.rs  spreadsheet_formula_calculation_tests.rs  spreadsheet_formula_graph_tests.rs  spreadsheet_import_tests.rs  spreadsheet_named_range.rs  spreadsheet_reference.rs  spreadsheet_sort_tests.rs  (+9 more)
crates/office/src/editor/: comment.rs  hyperlink.rs  image.rs  part.rs  part_tests.rs  presentation.rs  raw.rs  spreadsheet.rs  support.rs  text_replace.rs  types.rs  word.rs
crates/office/src/editor/comment/: presentation.rs  spreadsheet.rs  word.rs
crates/office/src/editor/hyperlink/: presentation.rs  spreadsheet.rs  word.rs
crates/office/src/editor/image/: format.rs
crates/office/src/editor/part/: spreadsheet.rs
crates/office/src/editor/presentation/: arrange.rs  table.rs  table_xml.rs  text.rs
crates/office/src/editor/spreadsheet/: arrange.rs  auto_filter.rs  conditional_formatting.rs  data_validation.rs  filter_xml.rs  formula.rs  import.rs  merge.rs  named_range.rs  sort.rs  structure.rs  style.rs  table.rs  view.rs  worksheet.rs
crates/office/src/editor/text_replace/: spreadsheet.rs
crates/office/src/editor/types/: conditional_formatting.rs  (+8 more)
crates/office/src/issues/: color.rs  contract.rs  formula.rs
crates/office/src/render/: image.rs  mod.rs  output.rs  svg.rs
crates/office/src/semantic/: annotated.rs  mod.rs  presentation.rs  selector.rs  spreadsheet.rs  word.rs
crates/office/src/spreadsheet_formula/: ast.rs  evaluate.rs  graph.rs  lexer.rs  parser.rs  registry.rs  structured_reference.rs  value.rs
crates/office/src/spreadsheet_formula_calculation_tests/: calculation.rs  recalculation.rs
crates/office/src/template_merge/: spreadsheet.rs
crates/science/: Cargo.toml  DATA_SOURCES.md  README.md  UPSTREAM.md
crates/science/package/: a3s-use-extension.acl
crates/science/package/web/: activity.css  activity.html  activity.js
crates/science/scripts/: package.sh
crates/science/src/: biorxiv.rs  chembl.rs  cli.rs  client.rs  clinical_trials.rs  ensembl.rs  lib.rs  main.rs  mcp.rs  models.rs  pubmed.rs
crates/science/tests/: integration.rs
(+161 files in other folders)
