[workspace]
members = [
    "crates/core",
    "crates/browser",
    "crates/browser-driver",
    "crates/office",
    "crates/extension",
    "crates/ocr",
    "crates/science",
]
resolver = "2"

[workspace.package]
version = "0.1.1"
edition = "2021"
license = "MIT"
repository = "https://github.com/A3S-Lab/Use"
authors = ["A3S Lab"]
rust-version = "1.82"

[workspace.dependencies]
anyhow = "1"
async-trait = "0.1"
axum = "0.8"
base64 = "0.22"
clap = { version = "4", features = ["derive"] }
clipper2 = { version = "=0.5.3", default-features = false }
fs2 = "0.4"
futures-util = "0.3"
flate2 = "1"
getrandom = "0.3"
image = { version = "=0.25.5", default-features = false, features = ["bmp", "gif", "jpeg", "png", "tiff", "webp"] }
imageproc = { version = "=0.25.0", default-features = false }
ort = { version = "=2.0.0-rc.10", default-features = false, features = ["copy-dylibs", "download-binaries", "ndarray", "std"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream"] }
quick-xml = "0.38"
regex = "1"
rmcp = { version = "=0.8.5", default-features = false, features = ["base64", "client", "macros", "server", "transport-io", "transport-streamable-http-client-reqwest", "transport-streamable-http-server"] }
schemars = "1.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sha2 = "0.10"
tar = "0.4"
thiserror = "2"
tempfile = "3"
tokio = { version = "1", features = ["fs", "io-util", "macros", "net", "rt-multi-thread", "process", "sync", "time"] }
tokio-util = "0.7"
tough = { version = "0.24", default-features = false, features = ["http"] }
url = "2"
zip = { version = "2", default-features = false, features = ["deflate"] }

[package]
name = "a3s-use"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version = "1.85"
description = "Typed Browser, Office, OCR, and external application capabilities for A3S"

[lib]
name = "a3s_use"
path = "src/lib.rs"

[[bin]]
name = "a3s-use"
path = "src/main.rs"

[features]
default = ["browser", "office", "ocr", "extensions", "mcp"]
browser = ["dep:a3s-use-browser"]
office = [
    "dep:a3s-use-office",
    "dep:axum",
    "dep:futures-util",
    "dep:getrandom",
]
ocr = ["dep:a3s-use-ocr"]
extensions = ["dep:a3s-use-extension"]
mcp = [
    "dep:axum",
    "dep:base64",
    "dep:fs2",
    "dep:getrandom",
    "dep:rmcp",
    "dep:schemars",
    "dep:tokio-util",
    "dep:windows-sys",
]
lightpanda = ["browser", "a3s-use-browser/lightpanda"]

[dependencies]
a3s-use-core = { version = "0.1.1", path = "crates/core" }
a3s-use-browser = { version = "0.1.1", path = "crates/browser", optional = true }
a3s-use-office = { version = "0.1.1", path = "crates/office", optional = true }
a3s-use-ocr = { version = "0.1.1", path = "crates/ocr", optional = true }
a3s-use-extension = { version = "0.1.1", path = "crates/extension", optional = true }
anyhow.workspace = true
axum = { workspace = true, optional = true }
base64 = { workspace = true, optional = true }
clap.workspace = true
fs2 = { workspace = true, optional = true }
futures-util = { workspace = true, optional = true }
getrandom = { workspace = true, optional = true }
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tempfile.workspace = true
tokio = { workspace = true, features = ["signal"] }
url.workspace = true
rmcp = { workspace = true, optional = true }
schemars = { workspace = true, optional = true }
tokio-util = { workspace = true, optional = true }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.52", features = ["Win32_Foundation", "Win32_System_Console"], optional = true }

[dev-dependencies]
async-trait.workspace = true
reqwest.workspace = true
flate2.workspace = true
olpc-cjson = "0.1"
ring = "0.17"
tar.workspace = true
tempfile.workspace = true
zip.workspace = true
