[package]
name = "a3s-use-browser"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Typed browser rendering and session contracts for A3S Use"

[dependencies]
a3s-use-core = { version = "0.1.0", path = "../core" }
async-trait.workspace = true
serde.workspace = true
url = { version = "2", features = ["serde"] }

[dev-dependencies]
tokio.workspace = true
