[package]
name = "a3s-use-document"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Agentic native Office and local PP-OCRv6 document parsing for A3S Use"

[features]
default = []
mcp = ["dep:rmcp"]

[dependencies]
a3s-use-core = { version = "0.1.1", path = "../core" }
a3s-use-office = { version = "0.1.1", path = "../office" }
a3s-use-ocr = { version = "0.1.1", path = "../ocr" }
async-trait.workspace = true
clap.workspace = true
rmcp = { workspace = true, optional = true }
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tempfile.workspace = true
tokio.workspace = true
image.workspace = true

[dev-dependencies]
zip.workspace = true
