[package]
name = "a3s-use-extension"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "ACL manifest and native surface contracts for A3S Use extensions"

[dependencies]
a3s-acl = "=0.2.2"
a3s-use-core = { version = "0.1.2", path = "../core" }
fs2.workspace = true
flate2.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
semver.workspace = true
sha2.workspace = true
tar.workspace = true
tempfile.workspace = true
tokio.workspace = true
tough.workspace = true
url.workspace = true
zip.workspace = true

[dev-dependencies]
olpc-cjson.workspace = true
ring = "0.17"
