[package]
name = "a3s-use-office"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Typed Office operations and OfficeCLI provider boundary for A3S Use"

[dependencies]
a3s-use-core = { version = "0.1.0", path = "../core" }
async-trait.workspace = true
fs2.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tokio.workspace = true

[dev-dependencies]
tempfile.workspace = true
