[package]
name = "a3s-use-science"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Typed life-science data retrieval for A3S Use"

[lib]
name = "a3s_use_science"
path = "src/lib.rs"

[[bin]]
name = "a3s-use-science"
path = "src/main.rs"

[dependencies]
a3s-use-core = { version = "0.1.1", path = "../core" }
clap.workspace = true
reqwest = { workspace = true, features = ["json"] }
rmcp.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
url.workspace = true

[dev-dependencies]
a3s-use-extension = { version = "0.1.1", path = "../extension" }
axum.workspace = true
tempfile.workspace = true
